# pyglauber

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.rst
examples/: compare_optical_mc.py
notebooks/: visualization.ipynb
src/pyglauber/: __init__.py  cli.py
src/pyglauber/models/: __init__.py  montecarlo.py  optical.py
src/pyglauber/particles/: __init__.py  hulthen.py  proton.py  woodsaxon.py
src/pyglauber/utils/: __init__.py  analysis.py  plotting.py  ulog.py
tests/: test_models.py  test_particles.py
