[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyglauber"
version = "0.4.0"
description = "Fast Optical and Monte Carlo Glauber for p+A, d+A, and A+A (RHIC/LHC)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Sabin Thapa", email = "sthapa3@kent.edu"}]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "matplotlib>=3.7",
  "typing-extensions>=4.5"
]
optional-dependencies.tqdm = ["tqdm>=4.66"]

[project.urls]
Homepage = "https://github.com/<USER>/pyglauber"

[project.scripts]
pyglauber = "pyglauber.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pyglauber", "pyglauber.particles", "pyglauber.models", "pyglauber.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
